--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"users": [{"id": 463688085352480789, "coins": 0, "name": "marsisus", "toadd": 30}, {"id": 1103396780864983110, "coins": 30, "name": "CheggBot", "toadd": 0}]}
+{"users": [{"id": 463688085352480789, "coins": 4221, "name": "marsisus", "toadd": 39}]}
