--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"users": [{"id": 463688085352480789, "coins": 4221, "name": "marsisus", "toadd": 39}]}
+{"users": [{"id": 463688085352480789, "coins": 0, "name": "", "toadd": 0, "inviteLink": "https://discord.gg/M2WGMZ6Eej", "inviteCount": 0}]}
