--- a/config.json
+++ b/config.json
@@ -1,21 +1,1 @@
-{
-    "users": [
-        {
-            "id": 463688085352480789,
-            "coins": 2,
-            "name": "",
-            "toadd": 0,
-            "inviteLink": "https://discord.gg/M2WGMZ6Eej",
-            "inviteCount": 1
-        },
-        {
-            "id": 856457579412979742,
-            "coins": 0,
-            "name": "TestAccountMarsisus",
-            "toadd": 10,
-            "inviteLink": "",
-            "inviteCount": 0,
-            "invited": true
-        }
-    ]
-}
+{"users": [{"id": 463688085352480789, "coins": 6, "name": "marsisus", "toadd": 0, "inviteLink": "https://discord.gg/M2WGMZ6Eej", "inviteCount": 3, "todayInviteCount": 2, "lastInviteDate": 11, "invited": true}, {"id": 856457579412979742, "coins": 2, "name": "TestAccountMarsisus", "toadd": 10, "inviteLink": "", "inviteCount": 1, "invited": false, "todayInviteCount": 1, "lastInviteDate": 11}]}
